<resources>
    <string name="app_name">MyClasses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lesson">Lessons</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_button">Add Button</string>
    <string name="back_button">back button</string>
    <string name="lesson_picture">lesson\'s picture</string>
    <string name="first_day_of_week">First Day Of Week</string>
    <string name="this_week_is">This week is :</string>
    <string name="lesson">Lesson</string>
    <string name="lesson_name">Lesson Name *</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="week">Week</string>
    <string name="defaultIconName">ic_lesson_0</string>
    <string name="defaultIconNamePrefix">ic_lesson_</string>
    <string name="a_picture">a picture</string>
    <string name="week_schedule">Week Schedule</string>
    <string name="settings">Settings</string>
    <string name="add_new_session">Add New Session</string>
    <string name="pick_a_time">pick a time</string>
    <string name="week_state">Week State</string>
    <string name="this_week_state">This Week State</string>
    <string name="day_of_week">Day Of Week</string>
    <string name="session_name">Session %1$d</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="remove">Remove</string>
    <string name="delete_session">Delete Session</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="add_new_lesson">Add New Lesson</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="teachers">Teachers</string>
    <string name="teacher_icon">Teacher Icon</string>
    <string name="session_reminders">Session Reminders</string>
    <string name="session_reminders_des">Reminders of session that you have created</string>
    <string name="session_reminders_id">session_reminders_id</string>

    <string-array name="days_of_week_long">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="days_of_week_short">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string-array name="odd_and_even">
        <item>EVEN</item>
        <item>ODD</item>
    </string-array>

    <string-array name="week_state">
        <item>Every Week</item>
        <item>Even Weeks</item>
        <item>Odd Weeks</item>
    </string-array>

</resources>