<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/week_schedule" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/lessonListFragment"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/lessons" />
        <item
            android:id="@+id/teacherListFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/teachers" />
    </group>
</menu>