<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lesson">

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.example.myclasses.ui.lesson.lesson_collection.LessonCollectionFragment"
        android:label="@string/menu_lesson"
        tools:layout="@layout/fragment_lesson">
        <action
            android:id="@+id/action_nav_lesson_to_newLessonFragment"
            app:destination="@id/newLessonFragment"
            app:popUpTo="@id/nav_lesson" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myclasses.ui.settings.SettingsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myclasses.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/newLessonFragment"
        android:name="com.example.myclasses.ui.lesson.newlesson.NewLessonFragment"
        android:label="NewLessonFragment"
        tools:layout="@layout/fragment_new_lesson">

        <argument
            android:name="dayId"
            app:argType="integer"
            android:defaultValue="7" />
        <action
            android:id="@+id/action_newLessonFragment_to_nav_lesson"
            app:destination="@id/nav_lesson" />
    </fragment>

    <fragment
        android:id="@+id/lesson_object_fragment"
        android:name="com.example.myclasses.ui.lesson.lesson_object.LessonObjectFragment"
        android:label="LessonObjectFragment"
        tools:layout="@layout/fragment_classes_of_day"/>

</navigation>